crates/monochange_integration_tests/tests/snapshots/changelog_streams__developer_release_notes.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: developer_notes
---
# Changelog

All notable changes to this project will be documented in this file.

This changelog is managed by [monochange](https://github.com/monochange/monochange).

## sdk 2.0.0 (2026-09-02)

### Native releases

#### Update the native application shell

_Owner:_ test · _Introduced in:_ [COMMIT]

The release changes native code and must ship through the app stores.
