crates/monochange_integration_tests/tests/snapshots/changelog_streams__notes_error_ambiguous.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: "String::from_utf8_lossy(&output.stderr).trim()"
---
error[config.invalid]: changelog output `user_multi` produced release notes for multiple targets; pass `--target <id>` to select one
  command: monochange notes
