crates/monochange_integration_tests/tests/snapshots/changelog_streams__notes_error_create-parent.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: "normalize_io_error(String::from_utf8_lossy(&output.stderr).trim())"
---
error[io.failed]: failed to create release-notes directory [PATH]: [OS ERROR]
  command: monochange notes
  help:    Check that the path exists and is writable, then rerun the command.
