crates/monochange_integration_tests/tests/snapshots/changelog_streams__notes_error_no-notes.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: "String::from_utf8_lossy(&output.stderr).trim()"
---
error[config.invalid]: changelog output `developer_app` produced no release notes for target `app`
  command: monochange notes
  help:    Check `monochange.toml` and the command arguments, then rerun the command.
