crates/monochange_integration_tests/tests/snapshots/changelog_streams__notes_error_target-outside-output.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: "String::from_utf8_lossy(&output.stderr).trim()"
---
error[config.invalid]: changelog output `user_markdown` does not target `core`; configured targets: app
  command: monochange notes
  help:    Check `monochange.toml` and the command arguments, then rerun the command.
