crates/monochange_integration_tests/tests/snapshots/changelog_streams__notes_error_unknown-output.snap
---
source: crates/monochange_integration_tests/tests/changelog_streams.rs
expression: "String::from_utf8_lossy(&output.stderr).trim()"
---
error[config.invalid]: unknown changelog output `missing`; available outputs: default, developer_app, developer_append, user_group, user_json, user_markdown, user_multi, user_text
  command: monochange notes
  help:    Check `monochange.toml` and the command arguments, then rerun the command.
